# gsquares

./: AUTHORS  COPYING  ChangeLog  GSquares.desktop  INSTALL  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  config.h.in  configure  configure.ac  configure.in  depcomp  gsquares.desktop  install-sh  missing
pixmaps/: Makefile.am  Makefile.in
src/: Makefile.am  Makefile.in  about.c  attribute.h  computerLogic.c  gameBoard.c  gameBoard.h  gameLogic.h  gsquares.h  initializer.c  initializer.h  main.c  paths.h.in  playerLogic.c  result.c
