dnl Process this file with autoconf to produce a configure script.

AC_PREREQ(2.67)

AC_INIT(src/main.c)
AC_CONFIG_SRCDIR(src/initializer.c)
AC_CONFIG_HEADERS(config.h)
AM_INIT_AUTOMAKE(GSquares, 0.1)
AM_SANITY_CHECK

AM_MAINTAINER_MODE

AC_PROG_CC
AC_ISC_POSIX
AC_HEADER_STDC

AC_CHECK_LIB(m, sqrt)
AC_CHECK_LIB(glib-2.0, g_timeout_add)
AC_CHECK_LIB(gtk-x11-2.0, gtk_main)
AC_CHECK_LIB(cairo, cairo_stroke)

CFLAGS="-O3 -std=gnu99 -pipe `pkg-config --cflags --libs gtk+-2.0`"

dnl we use -Wall if we have gcc
if test "x$GCC" = "xyes"; then
  if test -z "`echo "$CFLAGS" | grep "\-Wall" 2> /dev/null`" ; then
    CFLAGS="$CFLAGS -Wall"
  fi
fi

AC_SUBST(CFLAGS)
AC_SUBST(LDFLAGS)

AC_CHECK_HEADERS(stdlib.h string.h time.h)

AC_HEADER_STDBOOL

AC_FUNC_REALLOC
AC_CHECK_FUNCS(memmove sqrt)


AC_OUTPUT([Makefile     \
            src/Makefile  \
            src/paths.h   \
            pixmaps/Makefile])

